# christmas-tree

./: .gitignore
led-controller/: makefile
led-controller/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
led-controller/Inc/: color.h  effect.h  effect_controller.h  gpio.h  led_controller.h  main.h  params.h  pins.h  pwm.h  rcc.h  ring_buffer.h  systick.h  uart.h  util.h
led-controller/Src/: color.c  effect_controller.c  gpio.c  led_controller.c  main.c  params.c  pwm.c  rcc.c  ring_buffer.c  systick.c  uart.c  util.c
led-controller/Src/effects/: off.c  rainbow.c  set_color.c
led-localizer/: Cargo.toml  captures.txt
led-localizer/src/: main.rs
server/: display.ino  file_util.ino  flash.ino  http.ino  led-controller-server.ino  serve_get.ino  serve_post.ino  server-loop.ino  server.ino  string_util.ino
website/: effect.js  index.html  style.css
